welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: ')' expected but '}' found.
		}
                ^